Updated index and style
Made a basic list in index.html
Added basic styling in style.css

--- a/index.html
+++ b/index.html
@@ -1,7 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <!--browser compatibility-->
+    <title>https://g-muri.github.io</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!--just in case someone is using IE-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css"> <!--import the webpage's stylesheet-->
+</head>
+
 <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
+    <h1>Welcome to mah humble 'site</h1>
+
+    <p>TODO:</p>
+    <ul> <!--List 1-->
+        <li>Github projects from HS</li>
+        <ul>
+            <li>Summer art project</li>
+            <li>Text adventure game</li>
+            <li>Cipher</li>
+        </ul>
+        <li>Research papers</li>
+        <li>Favorite stuff</li>
+        <ul>
+            <li>Favorite music</li>
+            <li>Favorite movies</li>
+            <li>Favorite games</li>
+            <li>Favorite research papers</li>
+        </ul>
+    </ul> <!--End of List 1-->
 </body>
 </html>
