--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Welcome to mah humble 'site</h1>
+    <h1>Welcome to my website!</h1>
 
     <p>TODO:</p>
     <ul> <!--List 1-->
