--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <h1>Welcome to my website!</h1>
+    <p> This website is under construction. I will make it less ugly and easier to navigate, with my academic/professional portfolio first and personal stuff second.</p>
 
     <p>TODO:</p>
     <ul> <!--List 1-->
@@ -20,7 +21,7 @@
             <li>Text adventure game</li>
             <li>Cipher</li>
         </ul>
-        <li>Research papers</li>
+        <li><a href="my-research-papers.html" title="Takes you to a new page.">Research papers</a></li>
         <li>Favorite stuff</li>
         <ul>
             <li>Favorite music</li>
