Updated Navbar and my-research-papers
Added a navbar to both pages.
Expanded the research papers section.

--- a/index.html
+++ b/index.html
@@ -10,18 +10,26 @@
 </head>
 
 <body>
+    <div class="topnav">
+        <a href="index.html">Main</a>
+        <a href="my-research-papers.html" title="Takes you to a new page.">Research papers</a>
+        <a href="#">Link</a>
+    </div>
+
     <h1>Welcome to my website!</h1>
     <p> This website is under construction. I will make it less ugly and easier to navigate, with my academic/professional portfolio first and personal stuff second.</p>
 
     <p>TODO:</p>
-    <ul> <!--List 1-->
+    <ul>
+        <!--List 1-->
+        <li><a href="my-research-papers.html" title="Takes you to a new page.">Research papers</a></li>
+        <li>Add a navigation bar</li>
         <li>Github projects from HS</li>
         <ul>
-            <li>Summer art project</li>
             <li>Text adventure game</li>
+            <li>Summer art project</li>
             <li>Cipher</li>
         </ul>
-        <li><a href="my-research-papers.html" title="Takes you to a new page.">Research papers</a></li>
         <li>Favorite stuff</li>
         <ul>
             <li>Favorite music</li>
