--- a/my-research-papers.html
+++ b/my-research-papers.html
@@ -10,19 +10,33 @@
 </head>
 
 <body>
-    <div class="box-border">
-        <h2>Links</h2>
-        <p><a href="index.html">Main</a></p>
+    <div class="topnav">
+        <a href="index.html">Main</a>
+        <a href="my-research-papers.html" title="Takes you to a new page.">Research papers</a>
+        <a href="#">Link</a>
     </div>
 
-    <h1>
-        Works
-    </h1>
+    <h2>Research papers</h2>
     <ol class="upper-roman">
         <!--TODO add dates and links to ORCID-->
-        <li><a >What decisions do experts make when doing back-of-the-envelope calculations?</a></li>
-        <li><a >Importance of math prerequisites for performance in introductory physics</a></li>
-        <li><a >Characterizing Back-of-the-envelope Problem-solving in Engineering</a></li>
+        <li><a>What decisions do experts make when doing back-of-the-envelope calculations?</a></li>
+        <li><a>Importance of math prerequisites for performance in introductory physics</a></li>
+        <li><a>Characterizing Back-of-the-envelope Problem-solving in Engineering</a></li>
     </ol>
+    <h2>Senior thesis</h2>
+    <!--TODO highlight keywords, add links to wiki pages and other research papers-->
+    <a href="https://searchworks.stanford.edu/view/jz326qf1474" target="_blank" title="https://searchworks.stanford.edu/view/jz326qf1474"> Cognitive Framework for Blended Math-Science Sensemaking for Vectors, Vector Operations, and Integrals</a>
+    <p><strong>Abstract:</strong></p>
+    <p class="text-justified"><a href="https://arxiv.org/abs/2307.02482" target="_blank" title="https://arxiv.org/abs/2307.02482">Blended mathematical sensemaking in science (blended MSS)</a> involves developing a conceptual understanding of quantitative relationships 
+    and the scientific meaning of equations describing phenomena. In recent work, Kaldaras & Wieman developed and provided initial validity evidence for a unified cognitive framework (the framework) 
+    for blended MSS across various scientific disciplines, including Physics and Chemistry. The framework describes increasingly sophisticated ways of engaging in blended MSS as students develop an 
+    equation describing the scientific phenomenon or build a deeper understanding of the known equation describing the phenomenon. Kaldaras and Wieman validated the framework for simple mathematical 
+    relationships describing scientific phenomena involving multiplication, division, subtraction, and addition. In my senior thesis, I am extending the framework by Kaldaras & Wieman to include 
+    mathematical relationships describing phenomena that include vectors, vector operations, and integrals. I will present initial validity evidence for my framework grounded in analysis of student 
+    interviews. I use my cognitive framework to investigate whether taking vector calculus and intro electricity and magnetism (E&M) in separate contexts or courses that do not support blended MSS is 
+    effective in helping students build an integrated understanding of physics phenomena involving vectors, vector operations, and integrals. The interview analysis showed evidence for the validity 
+    of most of the levels of my framework for vectors, vector operations, and integrals. Interview analysis results showed no significant difference in the ability to engage in blended MSS between 
+    students who took intro E&M and students who did not. This finding suggests that intro E&M does not sufficiently prepare students to engage in higher levels of blended MSS for physics phenomena 
+    involving vectors, vector operations, and integrals.</p>
 </body>
 </html>
