--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <body>
     <div class="topnav">
-        <a href="index.html">Main</a>
-        <a href="my-research-papers.html" title="Takes you to a new page.">Research papers</a>
-        <a href="#">Link</a>
+        <a class="active" href="index.html">Main</a>
+        <a href="research-papers-main.html" title="Takes you to a new page.">Research Papers</a>
+        <a href="#">Personal Projects</a>
     </div>
 
     <h1>Welcome to my website!</h1>
@@ -38,5 +38,7 @@
             <li>Favorite research papers</li>
         </ul>
     </ul> <!--End of List 1-->
+
+    <a href="#top">> To the top (of the page)! <</a>
 </body>
 </html>
