--- a/research-papers-main.html
+++ b/research-papers-main.html
@@ -12,22 +12,22 @@
 <body>
     <div class="topnav">
         <a href="index.html">Main</a>
-        <a href="my-research-papers.html" title="Takes you to a new page.">Research papers</a>
-        <a href="#">Link</a>
+        <a class="active" href="research-papers-main.html" title="Takes you to a new page.">Research Papers</a>
+        <a href="#">Personal Projects</a>
     </div>
 
-    <h2>Research papers</h2>
+    <h1>Research papers</h1>
     <ol class="upper-roman">
         <!--TODO add dates and links to ORCID-->
         <li><a>What decisions do experts make when doing back-of-the-envelope calculations?</a></li>
         <li><a>Importance of math prerequisites for performance in introductory physics</a></li>
         <li><a>Characterizing Back-of-the-envelope Problem-solving in Engineering</a></li>
     </ol>
-    <h2>Senior thesis</h2>
+    <h1>Senior thesis</h1>
     <!--TODO highlight keywords, add links to wiki pages and other research papers-->
     <a href="https://searchworks.stanford.edu/view/jz326qf1474" target="_blank" title="https://searchworks.stanford.edu/view/jz326qf1474"> Cognitive Framework for Blended Math-Science Sensemaking for Vectors, Vector Operations, and Integrals</a>
     <p><strong>Abstract:</strong></p>
-    <p class="text-justified"><a href="https://arxiv.org/abs/2307.02482" target="_blank" title="https://arxiv.org/abs/2307.02482">Blended mathematical sensemaking in science (blended MSS)</a> involves developing a conceptual understanding of quantitative relationships 
+    <p class="text-justified"><a class="text-mediumseagreen" href="https://arxiv.org/abs/2307.02482" target="_blank" title="https://arxiv.org/abs/2307.02482">Blended mathematical sensemaking in science (blended MSS)</a> involves developing a conceptual understanding of quantitative relationships 
     and the scientific meaning of equations describing phenomena. In recent work, Kaldaras & Wieman developed and provided initial validity evidence for a unified cognitive framework (the framework) 
     for blended MSS across various scientific disciplines, including Physics and Chemistry. The framework describes increasingly sophisticated ways of engaging in blended MSS as students develop an 
     equation describing the scientific phenomenon or build a deeper understanding of the known equation describing the phenomenon. Kaldaras and Wieman validated the framework for simple mathematical 
@@ -38,5 +38,14 @@
     of most of the levels of my framework for vectors, vector operations, and integrals. Interview analysis results showed no significant difference in the ability to engage in blended MSS between 
     students who took intro E&M and students who did not. This finding suggests that intro E&M does not sufficiently prepare students to engage in higher levels of blended MSS for physics phenomena 
     involving vectors, vector operations, and integrals.</p>
+
+    <p><strong>Legend:</strong></p>
+    <p>
+        <span class="text-lightskyblue">Blue links:</span> I wrote/helped write it.<br />
+        <span class="text-mediumseagreen">Green links:</span> I did not write it.
+    </p>
+
+    <a href="#top">> To the top (of the page)! <</a>
+
 </body>
 </html>
