Fixed broken link

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <p>TODO:</p>
     <ul>
         <!--List 1-->
-        <li><a href="my-research-papers.html" title="Takes you to a new page.">Research papers</a></li>
+        <li><a href="research-papers-main.html" title="Takes you to a new page.">Research papers</a></li>
         <li>Add a navigation bar</li>
         <li>Github projects from HS</li>
         <ul>
